# cx

./: .gitignore  CHANGELOG.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  README.md  SPEC.md  install.ps1  install.sh
.claude/: query-improvement-plan.md
.claude/projects/-Users-indigo-projects-fafo-cx/memory/: feedback_comparison_tables.md
.github/ISSUE_TEMPLATE/: language-request.yml
.github/workflows/: ci.yml  release.yml
.ralph/: prd.json  progress.jsonl
src/: grep.rs  index.rs  lang.rs  main.rs  output.rs  query.rs  skill.md
src/language/: extract.rs  markdown.rs  mod.rs  python.rs  rust.rs  tests.rs  typescript.rs
src/language/queries/: bash.rs  c.rs  cpp.rs  dart.rs  elixir.rs  go.rs  java.rs  lua.rs  mod.rs  objc.rs  python.rs  ruby.rs  rust.rs  solidity.rs  swift.rs  typescript.rs  zig.rs
src/util/: git.rs  glob.rs  mod.rs
tests/: integration.rs
