[package]
name = "cx-cli"
version = "0.5.0"
edition = "2024"
description = "Semantic code navigation for AI agents"
license = "MIT"
repository = "https://github.com/ind-igo/cx"
keywords = ["code-navigation", "tree-sitter", "symbols", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cx"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-language-pack = "=1.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toon-format = "0.4"
ignore = "0.4.25"
memchr = "2"
redb = "3"
bincode = "1"

[dev-dependencies]
tempfile = "3"
